# api/src/http/routes/create-user.ts
@@ -10,22 +10,33 @@ export const createUser: FastifyPluginAsyncZod = async app => {
       schema: {
         tags: ['users'],
         description: 'Create user',
+        operationId: 'createUser',
         body: z.object({
           name: z.string(),
           age: z.number(),
           email: z.string(),
         }),
         response: {
-          201: z.null(),
+          201: z.object({
+            id: z.string(),
+            name: z.string(),
+            age: z.number(),
+            email: z.string().email(),
+          }),
         },
       },
     },
     async (request, replay) => {
       const { name, age, email } = request.body
 
-      users.push({ id: randomUUID(), name, age, email })
+      try {
+        const newUser = { id: randomUUID(), name, age, email }
 
-      replay.code(201).send()
+        users.push(newUser)
+        replay.code(201).send(newUser)
+      } catch (error) {
+        replay.code(400).send()
+      }
     }
   )
 }
